--- a/app/templates/info.html
+++ b/app/templates/info.html
@@ -90,6 +90,7 @@
                         <div class="text-center text-white text-sm md:text-base xl:text-2xl">
                     
                             <a class="rounded p-3 bg-indigo-500 hover:bg-indigo-700 shadow-lg" href="../{{id}}/download">Download Now! ({{ size }})</a>
+                            <a class="rounded p-3 bg-indigo-500 hover:bg-indigo-700 shadow-lg" href="intent:${url}#Intent;package=com.mxtech.videoplayer.pro;S.title=${path};end../{{id}}/download">Play Now! ({{ size }})</a>
                         
                         </div>
                     {% else %}
